# file_manager

./: CMakeLists.txt
src/: main.cpp
src/text/: text.txt
